[package]
name = "annotation-format-converter"
description = "Convert the annotation format of the dataset, such as converting Voc's XML format to Yolo's TXT format"
version = "0.1.0"
edition = "2021"
authors = ["wxg"]
license = "Apache-2.0"
repository = "https://github.com/xgpxg/annotation-format-converter"

[dependencies]
quick-xml = { version = "0.36.2", features = ["serialize"] }
clap = { version = "4.5.20", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
